--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "superjson": "^1.13.3",
+    "tesseract.js": "^7.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
