--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-av": "~16.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
+    "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
